--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -23,7 +23,7 @@
   <a href="../message/"><img src="../../images/message.png" alt="メッセージ">メッセージ一覧</a>
   <a href="../photo/"><img src="../../images/photo.png" alt="写真">写真</a>
   <a href="../illust/"><img src="../../images/illust.png" alt="イラスト">イラスト</a>
-  <a href="../info/"><img src="../../images/information.png" alt="インフォ">インフォメーション</a>
+  <a href="../information/"><img src="../../images/information.png" alt="インフォ">インフォメーション</a>
   <a href="../../index.html"><img src="../../images/home.png" alt="トップ">トップページ</a>
 </nav>
 
@@ -37,7 +37,7 @@
   <a href="../message/">メッセージ</a>|
   <a href="../photo/">写真</a>|
   <a href="../illust/">イラスト</a>|
-  <a href="../info/">インフォ</a>|
+  <a href="../information/">インフォ</a>|
   <a href="../../index.html">TOP</a>
 </div>
 
@@ -54,7 +54,7 @@
     <img src="../../images/illust.png" alt="イラスト">
     <span>イラスト</span>
   </a>
-  <a href="../info/">
+  <a href="../information/">
     <img src="../../images/information.png" alt="インフォ">
     <span>インフォ</span>
   </a>
