--- a/index.html
+++ b/index.html
@@ -9,57 +9,63 @@
 </head>
 <body>
 
-  <div class="header">
-    <a href="index.html" class="logo">Kannkann企画</a>
+  <header class="header">
+    <h1 class="header-title">
+      <a href="index.html" class="logo">Kannkann企画</a>
+    </h1>
     <button class="menu-btn" onclick="toggleMenu()">
       <img src="images/menu.png" alt="メニュー">
     </button>
-  </div>
 
-  <nav id="menu" class="side-menu">
-    <a href="message.html"><img src="images/message.png" alt="メッセージ">メッセージ</a>
-    <a href="#"><img src="images/photo.png" alt="写真">写真</a>
-    <a href="#"><img src="images/illust.png" alt="イラスト">イラスト</a>
-    <a href="#"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
-    <a href="index.html"><img src="images/home.png" alt="ホーム">ホーム</a>
-  </nav>
+    <nav id="menu" class="side-menu">
+      <a href="pages/message/"><img src="images/message.png" alt="メッセージ">メッセージ一覧</a>
+      <a href="pages/photo/"><img src="images/photo.png" alt="写真">写真</a>
+      <a href="pages/illust/"><img src="images/illust.png" alt="イラスト">イラスト</a>
+      <a href="pages/information/"><img src="images/information.png" alt="インフォ">インフォメーション</a>
+      <a href="index.html"><img src="images/home.png" alt="トップ">トップページ</a>
+    </nav>
+  </header>
 
-  <div class="container">
+  <main class="container">
     <img src="images/test-main.png" alt="メイン画像" class="main-image">
     <div class="main-text">
       <h2>🎉 サイト準備中 🎉</h2>
       <p>11月19日 公開予定です。どうぞお楽しみに！</p>
     </div>
-  </div>
+  </main>
 
-  <!-- 下部テキストリンク -->
-  <div class="footer-links">
-    <a href="message.html">メッセージ</a>｜
-    <a href="#">写真</a>｜
-    <a href="#">イラスト</a>｜
-    <a href="#">インフォメーション</a>｜
-    <a href="index.html">TOP</a>
-  </div>
+  <footer>
+    <div class="footer-links">
+      <a href="pages/message/">メッセージ</a>|
+      <a href="pages/photo/">写真</a>|
+      <a href="pages/illust/">イラスト</a>|
+      <a href="pages/information/">インフォ</a>|
+      <a href="index.html">TOP</a>
+    </div>
 
-  <!-- スマホ用ナビ -->
-  <div class="bottom-nav">
-    <a href="message.html">
-      <img src="images/message.png" alt="メッセージ">
-      メッセージ
-    </a>
-    <a href="#">
-      <img src="images/photo.png" alt="写真">
-      写真
-    </a>
-    <a href="#">
-      <img src="images/illust.png" alt="イラスト">
-      イラスト
-    </a>
-    <a href="#">
-      <img src="images/information.png" alt="インフォ">
-      インフォ
-    </a>
-  </div>
+    <div class="bottom-nav">
+      <a href="pages/message/">
+        <img src="images/message.png" alt="メッセージ">
+        <span>メッセージ</span>
+      </a>
+      <a href="pages/photo/">
+        <img src="images/photo.png" alt="写真">
+        <span>写真</span>
+      </a>
+      <a href="pages/illust/">
+        <img src="images/illust.png" alt="イラスト">
+        <span>イラスト</span>
+      </a>
+      <a href="pages/information/">
+        <img src="images/information.png" alt="インフォ">
+        <span>インフォ</span>
+      </a>
+      <a href="index.html">
+        <img src="images/home.png" alt="TOPに戻る">
+        <span>TOP</span>
+      </a>
+    </div>
+  </footer>
 
   <script>
     function toggleMenu() {
