--- a/index.html
+++ b/index.html
@@ -6,70 +6,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="images/kann-favicon.png">
   <link rel="stylesheet" href="css/common.css">
+  <script src="./js/toggleMenu.js"></script>
 </head>
+
 <body>
 
-  <div class="header">
-    <a href="index.html" class="logo">Kannkann企画</a>
-    <button class="menu-btn" onclick="toggleMenu()">
+  <!-- headerここから-->
+  <header>
+
+    <div class="header">
+      <a href="index.html" class="logo">Kannkann企画</a>
+      <button class="menu-btn" onclick="toggleMenu()">
       <img src="images/menu.png" alt="メニュー">
-    </button>
-  </div>
-
-  <nav id="menu" class="side-menu">
-    <a href="pages/message/"><img src="images/message.png" alt="メッセージ">メッセージ</a>
-    <a href="pages/photo/"><img src="images/photo.png" alt="写真">写真</a>
-    <a href="pages/illust/"><img src="images/illust.png" alt="イラスト">イラスト</a>
-    <a href="pages/information/"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
-    <a href="index.html"><img src="images/home.png" alt="ホーム">ホーム</a>
-  </nav>
-
-  <div class="container">
-    <img src="images/test-main.png" alt="メイン画像" class="main-image">
-    <div class="main-text">
-      <h2>🎉 サイト準備中 🎉</h2>
-      <p>11月19日 公開予定です。どうぞお楽しみに！</p>
+      </button>
     </div>
-  </div>
+
+    <nav id="menu" class="side-menu">
+      <a href="pages/message/"><img src="images/message.png" alt="メッセージ">メッセージ</a>
+      <a href="pages/photo/"><img src="images/photo.png" alt="写真">写真</a>
+      <a href="pages/illust/"><img src="images/illust.png" alt="イラスト">イラスト</a>
+      <a href="pages/information/"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
+      <a href="index.html"><img src="images/home.png" alt="ホーム">ホーム</a>
+    </nav>
+
+  </header>
+  <!-- headerここまで-->
+
+
+  <!-- mainここから-->
+  <main>
+
+    <div class="container">
+      <img src="images/test-main.png" alt="メイン画像" class="main-image">
+      <div class="main-text">
+        <h2>🎉 サイト準備中 🎉</h2>
+        <p>11月19日 公開予定です。どうぞお楽しみに！</p>
+      </div>
+    </div>
+
+
+  </main>
+  <!-- mainここまで-->
+
+
+  <!-- footerここから-->
+  <footer>
 
   <!-- 下部テキストリンク -->
-  <div class="footer-links">
-    <a href="pages/message/">メッセージ</a>｜
-    <a href="pages/photo/">写真</a>｜
-    <a href="pages/illust/">イラスト</a>｜
-    <a href="pages/information/">インフォメーション</a>｜
-    <a href="index.html">TOP</a>
-  </div>
+    <div class="footer-links">
+      <a href="pages/message/">メッセージ</a>｜
+      <a href="pages/photo/">写真</a>｜
+      <a href="pages/illust/">イラスト</a>｜
+      <a href="pages/information/">インフォメーション</a>｜
+      <a href="index.html">TOP</a>
+    </div>
 
   <!-- スマホ用ナビ -->
-  <div class="bottom-nav">
-    <a href="pages/message/">
-      <img src="images/message.png" alt="メッセージ">
-      メッセージ
-    </a>
-    <a href="pages/photo/">
-      <img src="images/photo.png" alt="写真">
-      写真
-    </a>
-    <a href="pages/illust/">
-      <img src="images/illust.png" alt="イラスト">
-      イラスト
-    </a>
-    <a href="pages/information/">
-      <img src="images/information.png" alt="インフォ">
-      インフォ
-    </a>
-  </div>
+    <div class="bottom-nav">
+      <a href="pages/message/">
+        <img src="images/message.png" alt="メッセージ">
+        メッセージ
+      </a>
+      <a href="pages/photo/">
+        <img src="images/photo.png" alt="写真">
+        写真
+      </a>
+      <a href="pages/illust/">
+        <img src="images/illust.png" alt="イラスト">
+        イラスト
+      </a>
+      <a href="pages/information/">
+        <img src="images/information.png" alt="インフォ">
+        インフォ
+      </a>
+    </div>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById('menu').classList.toggle('open');
-    }
+  </footer>
+  <!-- footerここまで-->
 
-    window.addEventListener('DOMContentLoaded', function () {
-      document.getElementById('menu').classList.remove('open');
-    });
-  </script>
 
 </body>
 </html>
