--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
       <a href="index.html">TOP</a>
     </div>
 
+      <div class="footer-social">
+    <a href="https://x.com/kannkikaku?s=21&t=5o0lw-318r4fDGVlBy44OQ" target="_blank" rel="noopener">
+      <img src="images/X.png" alt="Xアカウント" class="x-icon">
+    </a>
+  </div>
+
+  <div class="footer-copy">
+    © 菅叶和さん誕生日企画 2024 some rights reserved.
+  </div>
+    
   <!-- スマホ用ナビ -->
     <div class="bottom-nav">
       <a href="pages/message/">
