--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="footer-copy">
-    © 菅叶和さん誕生日企画 2024 some rights reserved.
+    © 菅叶和誕生日企画 2025 some rights reserved.
   </div>
     
   <!-- スマホ用ナビ -->
