--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -56,6 +56,17 @@
       <a href="../information/">インフォ</a>|
       <a href="../../index.html">TOP</a>
     </div>
+    
+    <div class="footer-social">
+    <a href="https://x.com/kannkikaku?s=21&t=5o0lw-318r4fDGVlBy44OQ" target="_blank" rel="noopener">
+      <img src="images/X.png" alt="Xアカウント" class="x-icon">
+    </a>
+  </div>
+
+  <div class="footer-copy">
+    © 菅叶和誕生日企画 2025 some rights reserved.
+  </div>
+    
 
     <div class="bottom-nav">
       <a href="../message/">
