--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -59,7 +59,7 @@
     
     <div class="footer-social">
     <a href="https://x.com/kannkikaku?s=21&t=5o0lw-318r4fDGVlBy44OQ" target="_blank" rel="noopener">
-      <img src="images/X.png" alt="Xアカウント" class="x-icon">
+      <img src="../../images/X.png" alt="Xアカウント" class="x-icon">
     </a>
   </div>
 
