--- a/pages/photo/index.html
+++ b/pages/photo/index.html
@@ -31,6 +31,8 @@
       <a href="../../index.html"><img src="../../images/home.png" alt="トップ">トップページ</a>
     </nav>
 
+    <div id="overlay" class="overlay" onclick="closeMenu()"></div>
+  
   </header>
   <!--headerここまで-->
 
