ロード画面のアニメーション追加、ページ遷移時のアニメーション追加

--- a/pages/illust/index.html
+++ b/pages/illust/index.html
@@ -11,7 +11,8 @@
   <script src="../../js/toggleMenu.js"></script>
   <script src="../../js/animation.js"></script>
 </head>
-<body>
+
+<body class="page-sub">
   <div id="page-content">
     <button class="menu-btn" onclick="toggleMenu()">
       <img src="../../images/menu.png" alt="メニュー">
