--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="./js/animation.js"></script>
 </head>
 
-<body>
+<body class="page-index">
   <div id="loading-screen">
     <img src="./images/kann-favicon.png" alt="Loading...">
   </div>
