トップページ画像変更

--- a/index.html
+++ b/index.html
@@ -41,20 +41,27 @@
     <!-- headerここまで-->
 
 
-    <!-- mainここから-->
-    <main>
+   <!-- mainここから-->
+<main>
+  <div class="slider-container">
+    <div class="slider" id="slider">
+      <img src="images/駅広告-東京.PNG" alt="駅広告-東京">
+      <img src="images/駅広告-大阪.PNG" alt="駅広告-大阪">
+      <img src="images/駅広告-愛知.PNG" alt="駅広告-愛知">
+      <img src="images/駅広告-石川.PNG" alt="駅広告-石川">
+    </div>
 
-      <div class="container">
-        <img src="images/test-main.png" alt="メイン画像" class="main-image">
-        <div class="main-text">
-          <h2>🎉 サイト準備中 🎉</h2>
-          <p>11月19日 公開予定です。どうぞお楽しみに！</p>
-        </div>
-      </div>
+    <!-- 矢印ボタン -->
+    <button class="arrow left" onclick="prevSlide()">&#10094;</button>
+    <button class="arrow right" onclick="nextSlide()">&#10095;</button>
+  </div>
 
-
-    </main>
-    <!-- mainここまで-->
+  <div class="main-text">
+    <h2>🎉 サイト準備中 🎉</h2>
+    <p>11月19日 公開予定です。どうぞお楽しみに！</p>
+  </div>
+</main>
+<!-- mainここまで-->
 
 
     <!-- footerここから-->
