--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     </div>
 
     <!-- 矢印ボタン -->
-    <button class="arrow left" onclick="prevSlide()">&#10094;</button>
-    <button class="arrow right" onclick="nextSlide()">&#10095;</button>
-  </div>
+  <button id="prevBtn" class="slider-btn prev">‹</button>
+  <button id="nextBtn" class="slider-btn next">›</button>
+</div>
 
   <div class="main-text">
     <h2>🎉 サイト準備中 🎉</h2>
