--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
 
    <!-- mainここから-->
 <main>
-  <div class="slider-container">
-    <div class="slider" id="slider">
-      <img src="images/駅広告-東京.PNG" alt="駅広告-東京">
-      <img src="images/駅広告-大阪.PNG" alt="駅広告-大阪">
-      <img src="images/駅広告-愛知.PNG" alt="駅広告-愛知">
-      <img src="images/駅広告-石川.PNG" alt="駅広告-石川">
-    </div>
+<div class="slider-container">
+  <div class="slider" id="slider">
+    <div class="slide"><img src="tokyo.jpg" alt="東京"></div>
+    <div class="slide"><img src="osaka.jpg" alt="大阪"></div>
+    <div class="slide"><img src="sapporo.jpg" alt="札幌"></div>
+  </div>
 
-    <!-- 矢印ボタン -->
-  <button id="prevBtn" class="slider-btn prev">‹</button>
-  <button id="nextBtn" class="slider-btn next">›</button>
+  <button class="arrow prev" id="prevBtn">←</button>
+  <button class="arrow next" id="nextBtn">→</button>
 </div>
 
   <div class="main-text">
