--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
 
    <!-- mainここから-->
 <main>
-<div class="slider-container">
-  <div class="slider" id="slider">
-    <div class="slide"><img src="tokyo.jpg" alt="東京"></div>
-    <div class="slide"><img src="osaka.jpg" alt="大阪"></div>
-    <div class="slide"><img src="sapporo.jpg" alt="札幌"></div>
+<div class="slider-wrapper">
+  <div class="slider">
+    <img src="images/駅広告-東京.PNG" alt="東京広告">
+    <img src="images/駅広告-大阪.PNG" alt="大阪広告">
+    <img src="images/駅広告-愛知.PNG" alt="愛知広告">
+    <img src="images/駅広告-石川.PNG" alt="石川広告">
   </div>
 
-  <button class="arrow prev" id="prevBtn">←</button>
-  <button class="arrow next" id="nextBtn">→</button>
+  <!-- 矢印ボタン -->
+  <button id="prevBtn" class="slider-btn prev">‹</button>
+  <button id="nextBtn" class="slider-btn next">›</button>
 </div>
 
   <div class="main-text">
