--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
    <!-- mainここから-->
 <main>
 <div class="slider-wrapper">
-  <div class="slider">
-    <img src="images/駅広告-東京.PNG" alt="東京広告">
-    <img src="images/駅広告-大阪.PNG" alt="大阪広告">
-    <img src="images/駅広告-愛知.PNG" alt="愛知広告">
-    <img src="images/駅広告-石川.PNG" alt="石川広告">
+  <div class="slider" id="slider">
+    <div class="slide"><img src="images/駅広告-東京.PNG" alt="東京広告"></div>
+    <div class="slide"><img src="images/駅広告-大阪.PNG" alt="大阪広告"></div>
+    <div class="slide"><img src="images/駅広告-愛知.PNG" alt="愛知広告"></div>
+    <div class="slide"><img src="images/駅広告-石川.PNG" alt="石川広告"></div>
   </div>
 
   <!-- 矢印ボタン -->
