--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../../css/common.css">
   <link rel="stylesheet" href="../../css/responsive.css">
   <link rel="stylesheet" href="../../css/animation.css">
+  <link rel="stylesheet" href="../../css/message.css">
   <script src="../../js/toggleMenu.js"></script>
   <script src="../../js/animation.js"></script>
 </head>
@@ -35,16 +36,19 @@
   <div id="page-content">
     <!--mainここから-->
     <main>
-
       <div class="container">
         <h2>📨 ファンの皆様からのメッセージ</h2>
-        <p class="message">・応援しています！これからも楽しみにしています！</p>
-        <p class="message">・素敵な企画ですね、完成を楽しみに待っています。</p>
-        <p class="message">・サイト公開おめでとうございます！</p>
+
+        <!-- ✅ 画像ギャラリー -->
+        <div class="message-gallery">
+          <img src="../../messages/letter-A.png" alt="letter-A" class="letter-img">
+          <img src="../../messages/letter-B.png" alt="letter-B" class="letter-img">
+          <img src="../../messages/letter-C.png" alt="letter-C" class="letter-img">
+          <img src="../../messages/letter-D.png" alt="letter-D" class="letter-img">
+        </div>
       </div>
     </main>
     <!--mainここまで-->
-
 
     <!--footerここから-->
     <footer>
