--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -46,6 +46,10 @@
           <img src="../../messages/letter-C.png" alt="letter-C" class="letter-img">
           <img src="../../messages/letter-D.png" alt="letter-D" class="letter-img">
         </div>
+        <!-- 拡大画像モーダル -->
+        <div id="imgModal" class="modal" onclick="closeModal(event)">
+        <img id="modalImg" src="" alt="拡大画像">
+      </div>  
       </div>
     </main>
     <!--mainここまで-->
