--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -94,6 +94,6 @@
   </div>
 
   <script src="../../js/transition.js"></script>
-  <script src="js/imageModal.js"></script>
+  <script src="../../js/imageModal.js"></script>
 </body>
 </html>
