--- a/pages/illust/index.html
+++ b/pages/illust/index.html
@@ -41,7 +41,7 @@
     <!--mainここから-->
     <main>
       <div class="container">
-        <h2>🎨 ファンの皆様からのイラスト</h2>
+        <h2>🎨 駅広告イラスト</h2>
         <p class="message">・近日公開予定です！</p>
         <!-- イラストが追加されたらここに <img> や <figure> を挿入 -->
       </div>
