letterの拡大表示と、letterの背景透過

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../css/message.css">
   <script src="../../js/toggleMenu.js"></script>
   <script src="../../js/animation.js"></script>
+  <script src="../../js/imageModal.js"></script>
 </head>
 <body class="page-sub">
     <button class="menu-btn" onclick="toggleMenu()">
@@ -46,6 +47,7 @@
           <img src="../../messages/letter-C.png" alt="letter-C" class="letter-img">
           <img src="../../messages/letter-D.png" alt="letter-D" class="letter-img">
         </div>
+
       </div>
     </main>
     <!--mainここまで-->
