駅広告　イラストに変更

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 <div class="swiper-container mySwiper">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
-            <img src="images/駅広告-東京.PNG" alt="東京イラスト" style="width: 100%; height: auto;">
+            <img src="images/駅広告-東京.png" alt="東京イラスト" style="width: 100%; height: auto;">
         </div>
         <div class="swiper-slide">
-            <img src="images/駅広告-大阪.PNG" alt="大阪イラスト" style="width: 100%; height: auto;">
+            <img src="images/駅広告-大阪.png" alt="大阪イラスト" style="width: 100%; height: auto;">
         </div>
         <div class="swiper-slide">
-            <img src="images/駅広告-愛知.PNG" alt="愛知イラスト" style="width: 100%; height: auto;">
+            <img src="images/駅広告-愛知.png" alt="愛知イラスト" style="width: 100%; height: auto;">
         </div>
         <div class="swiper-slide">
-            <img src="images/駅広告-石川.PNG" alt="石川イラスト" style="width: 100%; height: auto;">
+            <img src="images/駅広告-石川.png" alt="石川イラスト" style="width: 100%; height: auto;">
         </div>
     </div>
     
