--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -41,8 +41,8 @@
     <main>
 
       <div class="container">
-        <h2>📝 駅広告などのお知らせ</h2>
-        <p class="message">・現在、準備中です。駅広告に関する詳細はこのページで随時お知らせいたします。</p>
+        <h2>📝 駅広告のお知らせ</h2>
+        <p class="message">駅広告に関する詳細はこのページで随時お知らせいたします。</p>
         <!-- 駅広告のポスター画像や設置場所情報などを後日ここに追加予定 -->
       </div>
 
