--- a/pages/illust/index.html
+++ b/pages/illust/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../../css/common.css">
   <link rel="stylesheet" href="../../css/responsive.css">
   <link rel="stylesheet" href="../../css/animation.css">
+  <link rel="stylesheet" href="../../css/information.css"> <!-- インフォCSSを流用 -->
   <script src="../../js/toggleMenu.js"></script>
   <script src="../../js/animation.js"></script>
 </head>
@@ -16,6 +17,7 @@
   <button class="menu-btn" onclick="toggleMenu()">
     <img src="../../images/menu.png" alt="メニュー">
   </button>
+
   <!--headerここから-->
   <header>
     <div class="header">
@@ -33,7 +35,6 @@
     </nav>
 
     <div id="overlay" class="overlay" onclick="closeMenu()"></div>
-
   </header>
   <!--headerここまで-->
 
@@ -42,8 +43,36 @@
     <main>
       <div class="container">
         <h2>🎨 駅広告イラスト</h2>
-        <p class="message">・近日公開予定です！</p>
-        <!-- イラストが追加されたらここに <img> や <figure> を挿入 -->
+        <p class="message">・駅ごとのデザインイラストを掲載しています。</p>
+
+        <!-- 東京 -->
+        <section class="info-block">
+          <img src="../../images/駅広告-東京.png" alt="東京駅イラスト" class="info-map">
+          <p class="info-place">掲出場所：JR山手線 東京駅</p>
+          <p class="info-date">イラスト：〆さん</p>
+        </section>
+
+        <!-- 大阪 -->
+        <section class="info-block">
+          <img src="../../images/駅広告-大阪.png" alt="なんば駅イラスト" class="info-map">
+          <p class="info-place">掲出場所：Osaka Metro 御堂筋線 なんば駅</p>
+          <p class="info-date">イラスト：ノギさん</p>
+        </section>
+
+        <!-- 愛知 -->
+        <section class="info-block">
+          <img src="../../images/駅広告-愛知.png" alt="名古屋駅イラスト" class="info-map">
+          <p class="info-place">掲出場所：JR東海 名古屋駅</p>
+          <p class="info-date">イラスト：ふじわらんどさん</p>
+        </section>
+
+        <!-- 石川 -->
+        <section class="info-block">
+          <img src="../../images/駅広告-石川.png" alt="金沢駅イラスト" class="info-map">
+          <p class="info-place">掲出場所：IRいしかわ鉄道 金沢駅</p>
+          <p class="info-date">イラスト：さいだもーすさん</p>
+        </section>
+
       </div>
     </main>
     <!--mainここまで-->
@@ -51,24 +80,22 @@
 
     <!--footerここから-->
     <footer>
-      
       <div class="footer-links">
-        <a href="../message/index.html">メッセージ</a>|
-        <a href="../illust/index.html">イラスト</a>|
-        <a href="../information/index.html">インフォ</a>|
+        <a href="../message/index.html">メッセージ</a> |
+        <a href="../illust/index.html">イラスト</a> |
+        <a href="../information/index.html">インフォ</a> |
         <a href="../../index.html">TOP</a>
       </div>
 
       <div class="footer-social">
-      <a href="https://x.com/kannkikaku?s=21&t=5o0lw-318r4fDGVlBy44OQ" target="_blank" rel="noopener">
-        <img src="../../images/X.png" alt="Xアカウント" class="x-icon">
-      </a>
+        <a href="https://x.com/kannkikaku?s=21&t=5o0lw-318r4fDGVlBy44OQ" target="_blank" rel="noopener">
+          <img src="../../images/X.png" alt="Xアカウント" class="x-icon">
+        </a>
       </div>
 
       <div class="footer-copy">
         © 菅叶和誕生日企画 2025 some rights reserved.
       </div>
-
     </footer>
     <!--footerここまで-->
   </div>
@@ -91,7 +118,7 @@
       <span>TOP</span>
     </a>
   </div>
-  
+
   <script src="../../js/transition.js"></script>
 </body>
 </html>
