--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -43,7 +43,7 @@
     <main>
       <div class="container">
         <h2>📝 駅広告などのお知らせ</h2>
-        <p class="message">・現在、準備中です。駅広告に関する詳細はこのページで随時お知らせいたします。</p>
+        <p class="message">駅広告の掲出場所や掲出機関を以下の通りです！！</p>
 
         <!-- 東京 -->
         <section class="info-block">
