--- a/pages/illust/index.html
+++ b/pages/illust/index.html
@@ -43,7 +43,7 @@
     <main>
       <div class="container">
         <h2>🎨 駅広告イラスト</h2>
-        <p class="message">・駅ごとのデザインイラストを掲載しています。</p>
+        <p class="message">駅ごとのイラストは以下の通りです！！</p>
 
         <!-- 東京 -->
         <section class="info-block">
