画像追加してみた

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -52,8 +52,10 @@
                 <div class = "container">
                     <div class ="letterBook">
                         <div style = "background-image: url(../../messages/楽譜.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜.jpg);"></div>
+                        <div style = "background-image: url(../../messages/楽譜ピンク.jpg);"></div>
+                        <div style = "background-image: url(../../messages/楽譜黄色.jpg);"></div>
+                        <div style = "background-image: url(../../messages/楽譜水色.jpg);"></div>
+                        <div style = "background-image: url(../../messages/楽譜濃いピンク.jpg);"></div>
                         <div style = "background-image: url(../../messages/楽譜.jpg);"></div>
                     </div>
                 </div>
