表紙画像の変更及び表紙、裏表紙を開く際のアニメーションを変更

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -51,12 +51,14 @@
             <div class = "letterBook-viewport">
                 <div class = "container">
                     <div class ="letterBook">
-                        <div style = "background-image: url(../../messages/楽譜.jpg);"></div>
+                        <div class ="hard" style = "background-image: url(../../messages/楽譜表紙.jpg);"></div>
+                        <div class ="hard">表紙裏</div>
                         <div style = "background-image: url(../../messages/楽譜ピンク.jpg);"></div>
                         <div style = "background-image: url(../../messages/楽譜黄色.jpg);"></div>
                         <div style = "background-image: url(../../messages/楽譜水色.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜濃いピンク.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜.jpg);"></div>
+                        <div style = "background-image: url(../../messages/楽譜緑.jpg);"></div>
+                        <div class ="hard">裏表紙裏</div>
+                        <div class ="hard" style = "background-image: url(../../messages/楽譜表紙.jpg);"></div>
                     </div>
                 </div>
             </div>
