--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -58,7 +58,7 @@
                         <div style = "background-image: url(../../messages/楽譜水色.jpg);"></div>
                         <div style = "background-image: url(../../messages/楽譜緑.jpg);"></div>
                         <div class ="hard">裏表紙裏</div>
-                        <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙.jpg);"></div>
+                        <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2.jpg);"></div>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                         $book.css({
                             'position': 'relative',
                             'left': '50%',
-                            'transform': 'translate(-50%, 0)' 
+                            'transform': 'translate(-50%, 5%)' 
                         });
                     }
                     
