--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>準備中</title>
+  <title>お誕生日おめでとうございます！</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="images/kann-favicon.png">
   <link rel="stylesheet" href="css/common.css">
@@ -68,7 +68,7 @@
 </div>
 
   <div class="main-text">
-    <h2>🎉 サイト準備中 🎉</h2>
+    <h2>🎉 お誕生日おめでとうございます 🎉</h2>
     <p>11月19日 公開予定です。どうぞお楽しみに！</p>
   </div>
 </main>
