--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -70,7 +70,7 @@
         <section class="info-block">
           <img src="../../images/Isikawa-map.png" alt="金沢駅マップ" class="info-map">
           <p class="info-place">場所：IRいしかわ鉄道 金沢駅</p>
-          <p class="info-date">日程：11/18～11/25</p>
+          <p class="info-date">日程：11/18～11/25　※掲出場所はおおよその位置です。</p>
         </section>
       </div>
     </main>
