--- a/index.html
+++ b/index.html
@@ -71,6 +71,62 @@
     <h2>🎉 お誕生日おめでとうございます 🎉</h2>
     <p>11月19日 公開予定です。どうぞお楽しみに！</p>
   </div>
+<!-- ▼ サブページ紹介エリア 全体 ---------->
+<section class="intro-section fade-in">
+
+    <!-- お誕生日メッセージ（文字のみ） -->
+    <div class="intro-title slide-up">
+        <h2>🎉 お誕生日おめでとうございます 🎉</h2>
+    </div>
+
+    <!-- お知らせセクション -->
+    <div class="news-section slide-up">
+        <h3>📢 お知らせ</h3>
+        <ul class="news-list">
+            <li>サイトオープンしました！</li>
+            <li>11月17日 正午より駅広告掲出開始！</li>
+        </ul>
+    </div>
+
+    <!-- ▼ サブページのカードリンク一覧 ---------->
+    <div class="subpage-cards">
+
+        <!-- メッセージ -->
+        <a href="pages/message/" class="sub-card fade-in">
+            <div class="sub-card-img">
+                <img src="images/メッセージ-ALL.png" alt="メッセージ一覧">
+            </div>
+            <div class="sub-card-text">
+                <h4>メッセージ</h4>
+                <p>菅叶和さんファンの皆さまから募集したメッセージ！！</p>
+            </div>
+        </a>
+
+        <!-- イラスト -->
+        <a href="pages/illust/" class="sub-card fade-in">
+            <div class="sub-card-img">
+                <img src="images/駅広告-ALL.png" alt="駅広告デザイン">
+            </div>
+            <div class="sub-card-text">
+                <h4>イラスト</h4>
+                <p>4ヶ所に掲出中の駅広告デザインを紹介！！</p>
+            </div>
+        </a>
+
+        <!-- インフォメーション -->
+        <a href="pages/information/" class="sub-card fade-in">
+            <div class="sub-card-img">
+                <img src="images/マップ-ALL.png" alt="掲出場所マップ">
+            </div>
+            <div class="sub-card-text">
+                <h4>インフォ</h4>
+                <p>駅掲出場所の詳細！！</p>
+            </div>
+        </a>
+
+    </div>
+</section>
+
 </main>
 <!-- mainここまで-->
 
