--- a/index.html
+++ b/index.html
@@ -68,16 +68,10 @@
 </div>
 
   <div class="main-text">
-    <h2>🎉 お誕生日おめでとうございます 🎉</h2>
-    <p>11月19日 公開予定です。どうぞお楽しみに！</p>
+    <h2>お誕生日おめでとうございます</h2>
   </div>
 <!-- ▼ サブページ紹介エリア 全体 ---------->
 <section class="intro-section fade-in">
-
-    <!-- お誕生日メッセージ（文字のみ） -->
-    <div class="intro-title slide-up">
-        <h2>🎉 お誕生日おめでとうございます 🎉</h2>
-    </div>
 
     <!-- お知らせセクション -->
     <div class="news-section slide-up">
