--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 </div>
 
   <div class="main-text">
-    <h2>お誕生日おめでとうございます</h2>
-  </div>
+  <h2>菅叶和さん<br>お誕生日おめでとうございます！</h2>
+</div>
 <!-- ▼ サブページ紹介エリア 全体 ---------->
 <section class="intro-section fade-in">
 
