--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="subpage-cards">
 
         <!-- メッセージ -->
-        <a href="pages/message/" class="sub-card fade-in">
+        <a href="pages/message/" class="sub-card horizontal-card fade-in">
             <div class="sub-card-img">
                 <img src="images/メッセージ-ALL.png" alt="メッセージ一覧">
             </div>
@@ -97,7 +97,7 @@
         </a>
 
         <!-- イラスト -->
-        <a href="pages/illust/" class="sub-card fade-in">
+        <a href="pages/illust/" sub-card horizontal-card fade-in">
             <div class="sub-card-img">
                 <img src="images/駅広告-ALL.png" alt="駅広告デザイン">
             </div>
@@ -108,7 +108,7 @@
         </a>
 
         <!-- インフォメーション -->
-        <a href="pages/information/" class="sub-card fade-in">
+        <a href="pages/information/" class="sub-card horizontal-card fade-in">
             <div class="sub-card-img">
                 <img src="images/マップ-ALL.png" alt="掲出場所マップ">
             </div>
