--- a/index.html
+++ b/index.html
@@ -86,21 +86,28 @@
     <div class="subpage-cards">
 
         <!-- メッセージ -->
-        <a href="pages/message/" class="sub-card horizontal-card fade-in">
+        <a href="pages/message/" class="sub-card fade-in">
+          <div class="sub-card-inner">
             <div class="sub-card-img">
-                <img src="images/メッセージ-ALL.png" alt="メッセージ一覧">
+              <img src="images/メッセージ-ALL.png" alt="メッセージ一覧">
             </div>
+
             <div class="sub-card-text">
                 <h4>メッセージ</h4>
                 <p>菅叶和さんファンの皆さまから募集したメッセージ！！</p>
             </div>
-        </a>
+        </div>
+
+    </a>
+
 
         <!-- イラスト -->
-        <a href="pages/illust/" sub-card horizontal-card fade-in">
+        <a href="pages/message/" class="sub-card fade-in">
+          <div class="sub-card-inner">
             <div class="sub-card-img">
                 <img src="images/駅広告-ALL.png" alt="駅広告デザイン">
             </div>
+          
             <div class="sub-card-text">
                 <h4>イラスト</h4>
                 <p>4ヶ所に掲出中の駅広告デザインを紹介！！</p>
@@ -108,7 +115,8 @@
         </a>
 
         <!-- インフォメーション -->
-        <a href="pages/information/" class="sub-card horizontal-card fade-in">
+        <a href="pages/message/" class="sub-card fade-in">
+          <div class="sub-card-inner">
             <div class="sub-card-img">
                 <img src="images/マップ-ALL.png" alt="掲出場所マップ">
             </div>
