--- a/index.html
+++ b/index.html
@@ -82,41 +82,38 @@
         </ul>
     </div>
 
-    <!-- ▼ サブページのカードリンク一覧 ---------->
-    <div class="subpage-cards">
+<!-- ▼ サブページのカードリンク一覧 ---------->
+<div class="subpage-cards">
 
-        <!-- メッセージ -->
-        <a href="pages/message/" class="sub-card fade-in">
-          <div class="sub-card-inner">
+    <!-- メッセージ -->
+    <a href="pages/message/" class="sub-card fade-in">
+        <div class="sub-card-inner">
             <div class="sub-card-img">
-              <img src="images/メッセージ-ALL.png" alt="メッセージ一覧">
+                <img src="images/メッセージ-ALL.png" alt="メッセージ一覧">
             </div>
-
             <div class="sub-card-text">
                 <h4>メッセージ</h4>
                 <p>菅叶和さんファンの皆さまから募集したメッセージ！！</p>
             </div>
         </div>
-
     </a>
 
-
-        <!-- イラスト -->
-        <a href="pages/message/" class="sub-card fade-in">
-          <div class="sub-card-inner">
+    <!-- イラスト -->
+    <a href="pages/illust/" class="sub-card fade-in">
+        <div class="sub-card-inner">
             <div class="sub-card-img">
                 <img src="images/駅広告-ALL.png" alt="駅広告デザイン">
             </div>
-          
             <div class="sub-card-text">
                 <h4>イラスト</h4>
                 <p>4ヶ所に掲出中の駅広告デザインを紹介！！</p>
             </div>
-        </a>
+        </div>
+    </a>
 
-        <!-- インフォメーション -->
-        <a href="pages/message/" class="sub-card fade-in">
-          <div class="sub-card-inner">
+    <!-- インフォメーション -->
+    <a href="pages/information/" class="sub-card fade-in">
+        <div class="sub-card-inner">
             <div class="sub-card-img">
                 <img src="images/マップ-ALL.png" alt="掲出場所マップ">
             </div>
@@ -124,9 +121,10 @@
                 <h4>インフォ</h4>
                 <p>駅掲出場所の詳細！！</p>
             </div>
-        </a>
+        </div>
+    </a>
 
-    </div>
+</div>
 </section>
 
 </main>
