--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -43,7 +43,7 @@
     <main>
       <div class="container">
         <h2>📝 駅広告などのお知らせ</h2>
-        <p class="message">駅広告の掲出場所や掲出機関を以下の通りです！！</p>
+        <p class="message">駅広告の掲出場所や掲出期間を以下の通りです！！</p>
 
         <!-- 東京 -->
         <section class="info-block">
@@ -55,7 +55,7 @@
         <!-- 大阪 -->
         <section class="info-block">
           <img src="../../images/Osaka-map.PNG" alt="なんば駅マップ" class="info-map">
-          <p class="info-place">場所：Osaka Metro 御堂筋線 なんば駅</p>
+          <p class="info-place">場所：Osaka Metro 御堂筋線 なんば駅<br>※本駅広告は御堂筋線ホーム内にあります</p>
           <p class="info-date">日程：11/17～11/24</p>
         </section>
 
@@ -70,7 +70,7 @@
         <section class="info-block">
           <img src="../../images/Isikawa-map.png" alt="金沢駅マップ" class="info-map">
           <p class="info-place">場所：IRいしかわ鉄道 金沢駅</p>
-          <p class="info-date">日程：11/18～11/25　※掲出場所はおおよその位置です。</p>
+          <p class="info-date">日程：11/18～11/25<br>※掲出場所はおおよその位置です。</p>
         </section>
       </div>
     </main>
