--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -55,8 +55,8 @@
         <!-- 大阪 -->
         <section class="info-block">
           <img src="../../images/Osaka-map.PNG" alt="なんば駅マップ" class="info-map">
-          <p class="info-place">場所：Osaka Metro 御堂筋線 なんば駅<br>※本駅広告は御堂筋線ホーム内にあります</p>
-          <p class="info-date">日程：11/17～11/24</p>
+          <p class="info-place">場所：Osaka Metro 御堂筋線 なんば駅</p>
+          <p class="info-date">日程：11/17～11/24<br>※本駅広告は御堂筋線ホーム内にあります</p>
         </section>
 
         <!-- 愛知 -->
