--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <div class="news-section slide-up">
         <h3>📢 お知らせ</h3>
         <ul class="news-list">
-            <li>サイトオープンしました！</li>
-            <li>11月17日 正午より駅広告掲出開始！</li>
+            <li>・サイトオープンしました！</li>
+            <li>・11/17 正午より駅広告掲出開始！</li>
         </ul>
     </div>
 
