--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <h2>菅叶和さん<br>お誕生日おめでとうございます！</h2>
 
     <h3>📢お知らせ</h3>
-    <p>サイトオープン！駅広告掲出開始！</p>
-    <p>2025.11.17</p>
+    <p>・サイトオープンしました！</p>
+    <p>・11/17正午より駅広告掲出開始！</p>
 
   </div>
 
@@ -89,7 +89,7 @@
           </div>
           <div class="card-text-content">
               <h3>メッセージ</h3>
-              <p class="card-title">ファンの皆様からの温かいメッセージ</p>
+              <p class="card-title">菅叶和さんファンの皆さまから募集したメッセージ！！</p>
           </div>
       </a>
 
@@ -109,7 +109,7 @@
           </div>
           <div class="card-text-content">
               <h3>インフォ</h3>
-              <p class="card-title">4ヶ所に掲出中の駅広告デザインを紹介！！</p>
+              <p class="card-title">駅掲出場所の詳細！！</p>
           </div>
       </a>
 
